syntax = "proto3";

package credentials;

option go_package = "./pb";

enum OperatorType {
	OT_ROCKETPOOL = 0; // Issued to a RP NO via a signature from their node wallet.
	OT_SOLO = 1; // Issued to a solo validator via a signature from their 0x01 withdrawal address.
}

message Credential {
	bytes node_id = 1; // 20 bytes representing the Node address, or if a solo validator, the withdrawal address.
	int64 timestamp = 2; // UTC epoch time the credential was issued
	OperatorType operator_type = 3; // The type of Node Operator for whom the credential was issued.
}

message AuthenticatedCredential {
	Credential credential = 1; // The credential itself
	bytes mac = 2; // The (H)MAC
}
